--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.1",
     "@types/crypto-js": "^4.1.1",
@@ -36,6 +37,7 @@
     "cache-manager": "^4.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cron": "^2.1.0",
     "crypto-js": "^4.1.1",
     "log4js": "^6.6.1",
     "moment": "^2.29.4",
