--- a/package.json
+++ b/package.json
@@ -31,22 +31,31 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/cache-manager-redis-store": "^2.0.1",
     "@types/crypto-js": "^4.1.1",
+    "@types/csurf": "^1.11.2",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "cache-manager": "^4.1.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cron": "^2.1.0",
     "crypto-js": "^4.1.1",
+    "csurf": "^1.11.0",
+    "express-rate-limit": "^6.5.2",
+    "helmet": "^6.0.0",
     "log4js": "^6.6.1",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "nestjs-redis": "^1.3.3",
+    "nestjs-simple-redis-lock": "^0.2.1",
     "node-rsa": "^1.1.1",
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -60,6 +69,7 @@
     "@types/cache-manager": "^4.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
