--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,12 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@s/*": [
+        "./static/*"
+      ],
+      "@g/*": [
+        "./GXA_WORKS/*"
       ]
     }
   }
