--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "build-wp": "nest build --webpack --webpackPath=./webpack.config.js",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -21,10 +22,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/subgraph": "^2.3.2",
     "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.2.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -47,11 +51,15 @@
     "cron": "^2.1.0",
     "crypto-js": "^4.1.1",
     "csurf": "^1.11.0",
+    "emitter": "^0.0.5",
     "express-rate-limit": "^6.5.2",
+    "graphql": "^16.6.0",
+    "hbs": "^4.2.0",
     "helmet": "^6.0.0",
     "log4js": "^6.6.1",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "nestjs-i18n": "^10.2.6",
     "nestjs-redis": "^1.3.3",
     "nestjs-simple-redis-lock": "^0.2.1",
     "node-rsa": "^1.1.1",
@@ -65,6 +73,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "stacktrace-js": "^2.0.2",
+    "ts-morph": "^17.0.1",
     "typeorm": "^0.2.45",
     "unzip": "^0.1.11"
   },
